<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/setting">

        <ListPreference
            app:defaultValue="English"
            app:entries="@array/languages_list"
            app:entryValues="@array/locales"
            app:key="lang"
            app:icon="@drawable/locale"
            app:title="@string/select_lang"
            app:useSimpleSummaryProvider="true"
            app:positiveButtonText="@string/select_lang"
            app:allowDividerAbove="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/date_options">

        <SwitchPreferenceCompat
            app:key="eritrean"
            app:icon="@drawable/ic_eritrea"
            app:title="@string/select_eritrean" />

        <SwitchPreferenceCompat
            app:key="tigraian"
            app:icon="@drawable/ic_tigray"
            app:title="@string/select_tigray" />

        <SwitchPreferenceCompat
            app:key="gregorian"
            app:icon="@drawable/show_gregorian_dates"
            app:title="@string/show_gregorian" />

    </PreferenceCategory>
    <PreferenceCategory>

    </PreferenceCategory>

</PreferenceScreen>