<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp"
    android:layout_marginBottom="?android:attr/actionBarSize">
    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/bahre_hasab"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="7dp"
        android:background="@color/darkGrey"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/abyssinica"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="8dp"
        android:layout_below="@+id/title_text"
        android:id="@+id/inputs">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_text"
                android:layout_width="match_parent"
                android:inputType="number"
                android:padding="10dp"
                android:layout_marginEnd="3dp"
                android:hint="@string/insert_year_here"
                android:textColor="@color/black"
                android:fontFamily="@font/abyssinica"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:rippleColor="@color/Neon"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calculate"
            android:textSize="14sp"
            android:fontFamily="@font/abyssinica"
            android:textAlignment="center" />
    </LinearLayout>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/holidays_title"
        android:textColor="@color/lightBlue"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/lightGrey"
        android:fontFamily="@font/abyssinica"
        android:layout_below="@id/inputs" />
    <ListView
        android:id="@+id/list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/title"
        android:divider="@color/lightGrey"
        android:padding="0.5dp"
        android:dividerHeight="0.5dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="none" />
</RelativeLayout>