<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tgk.elet.ui.bahre_hassab.HassabFragment">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="?attr/colorPrimary"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/era"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:layout_toStartOf="@+id/era"/>
        <TextView
            android:id="@+id/era"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/red_ish"
            android:layout_marginStart="5dp"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/bahti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahti"
            android:layout_toStartOf="@id/bahti_day"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:layout_below="@+id/era"/>
        <TextView
            android:id="@+id/bahti_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/red_ish"
            android:textSize="15sp"
            android:layout_below="@id/era"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/holidays"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/holiday_item"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.circularreveal.CircularRevealFrameLayout
            android:id="@+id/sheet"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:visibility="invisible"
            app:layout_behavior="com.google.android.material.transformation.FabTransformationSheetBehavior">
            <include
                android:id="@+id/query"
                layout="@layout/input_layout"/>
        </com.google.android.material.circularreveal.CircularRevealFrameLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
           android:layout_gravity="bottom|end"
            android:contentDescription="@string/change_year"
            android:src="@drawable/hassab"
            android:layout_margin="5dp"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>